--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>INSIVUMEH</title>
-	<!-- Bootstrap -->
-	<link rel="stylesheet" href="lib/mdcore/css/bootstrap.min.css">
-	<!-- MDCore -->
-	<link rel="stylesheet" href="lib/mdcore/css/mdb.min.css">
-	<!-- Custom styles -->
-	<link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <title>INSIVUMEH</title>
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="lib/mdcore/css/bootstrap.min.css">
+  <!-- MDCore -->
+  <link rel="stylesheet" href="lib/mdcore/css/mdb.min.css">
+  <!-- Custom styles -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<!--Navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark primary-color">
+  <!--Navbar-->
+<nav class="navbar navbar-expand-lg navbar-dark primary-color scrolling-navbar sticky-top elegant-color-dark">
 
   <!-- Navbar brand -->
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">INSIVUMEH</a>
 
   <!-- Collapse button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
@@ -29,48 +29,48 @@
     <!-- Links -->
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home
-          <span class="sr-only">(current)</span>
+        <a class="nav-link" href="#">Inicio
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Quienes somos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="#">Sismologia</a>
       </li>
-
-      <!-- Dropdown -->
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">Dropdown</a>
-        <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Vulcanologia</a>
       </li>
-
+      <li class="nav-item">
+        <a class="nav-link" href="#">Metereologia</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Hidrologia</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Ubicación</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contáctanos</a>
+      </li>
     </ul>
     <!-- Links -->
 
     <form class="form-inline">
       <div class="md-form my-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+        <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search">
       </div>
     </form>
   </div>
   <!-- Collapsible content -->
-
 </nav>
-<!--/.Navbar-->
-	<!-- jQuery -->
-	<script src="lib/mdcore/js/jquery-3.4.1.min.js"></script>
-	<!-- Bootstrap scripts -->
-	<script src="lib/mdcore/js/bootstrap.min.js"></script>
-	<!-- MDCore  -->
-	<script type="lib/mdcore/js/mdb.min.js"></script>
-	<!-- Custom scripts -->
-	<script src="js/scripts.js"></script>
+  <!-- jQuery -->
+  <script src="lib/mdcore/js/jquery-3.4.1.min.js"></script>
+  <!-- Bootstrap scripts -->
+  <script src="lib/mdcore/js/bootstrap.min.js"></script>
+  <!-- MDCore  -->
+  <script type="lib/mdcore/js/mdb.min.js"></script>
+  <!-- Custom scripts -->
+  <script src="js/scripts.js"></script>
 </body>
 </html>
